# specs2

./: .gitignore  README.md  audio.txt  char.txt  cpu.txt  disk.txt  fs.txt  hardware.txt  map.txt  mem.txt  palette.txt  prog.txt  video.txt
bios/: Makefile  README.md  isl.s  main.s
font/: README.md  convert_glyphs.c  font0  revert_glyphs.c
palette/: genpalette.c  genpalette2.c  parsepal.c
s2emu/: CMakeLists.txt  README.md
s2emu/src/: main.cpp
s2emu/src/core/: char.c  char.h  core.c  core.h  cpu.c  cpu.h  sound.c  sound.h  specs2.c  specs2.h  video.c  video.h
s2emu/src/gui/: font_plexMono.cpp  fonts.h  main.cpp
